name:             json-fu
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

source-repository head
  type: git
  location: https://github.com/sol/json-fu

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Data.JSON
  other-modules:
      Data.JSON.Generic
      Data.JSON.Functions
      Util
  build-depends:
      base    == 4.*
    , bytestring
    , vector
    , text
    , containers
    , unordered-containers
    , aeson
    , hashable
    , attoparsec
    , time
    , syb
    , mtl

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      test, src
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , bytestring
    , vector
    , text
    , containers
    , unordered-containers
    , aeson
    , hashable
    , attoparsec
    , time
    , syb
    , mtl

    , hspec >= 1.3
